--- a/YalantisTest/YalantisTest/Controllers/README
+++ b/YalantisTest/YalantisTest/Controllers/README
@@ -2,13 +2,13 @@
 Доброго времени суток
 
 В данном проекте я выполнил все данные мне условия тестового задания.
-Я посчитал, что мне будет удобнее реализовать логику созранения данных в БД через фреймворк SwiftRealm (также его не выгружал на GitHub)
-Основные файлы как контроллеры и модель хранения данных я разбил на папки для удобства, файл Task содержит задание переданное вашим сотрудником.
+Я посчитал, что мне будет удобнее реализовать логику сохранения данных в БД через фреймворк SwiftRealm (также его не выгружал на GitHub)
+Основные файлы, как контроллеры и модель хранения данных, я разбил на папки для удобства, а файл Task содержит задание переданное вашим сотрудником.
 
-Мной было решено создать "stack" с помощью Realm для того чтобы хранить последовательность выбираемых ячеек таблицы Gift'ов, для того чтобы корректно выполнялось условие:
+Мною было решено создать "stack" с помощью Realm для того чтобы хранить последовательность выбираемых ячеек таблицы Gift'ов, для того чтобы корректно выполнялось условие:
 "Каждый следующий выбор сверх лимита должен отменить выбор на необходимую сумму из первых выбранных призов."
 
 Также проверил логику на корректное поведение стека при удалении ячейки, которая была отмечена checkmark'ой и удалена по свайпу.
-Так как вся информация сразу же выгружается в объекты Realm, то все легко отобразить при внезапном закрытии приложения.
+Так как вся информация сразу же выгружается в объекты Realm, то всё легко восстановить при внезапном закрытии приложения.
 
 Спасибо за практику, Даниил
